add media to footer

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     
     <section class="about">
         
-        <p>Dziękujemy za zainteresowanie! W naszym asortymencie znajdują się ekologiczne warzywa, owoce oraz mleko i jego przetwory.</p> <p>Wybierz, jaką grupą produktów jesteś zainteresowana/y, a następnie dodaj do koszyka. </p>
+        <p>Dziękujemy za zainteresowanie! W naszym asortymencie znajdują się ekologiczne warzywa, owoce oraz mleko i jego przetwory.</p> <p>Wybierz, jaką grupą produktów jesteś zainteresowana/y, a następnie dodaj produkty do koszyka. </p>
         <p>Udanych zakupów!</p>
     </section>
 
