--- a/fruits.html
+++ b/fruits.html
@@ -27,46 +27,46 @@
         </div>
     </header>
 
-   <section class="vegetablesSection">
+   <section class="productsSection">
 
-       <div id="carrot">
-            <div class="photo"><img src="img/carrots.jpg" alt="marchewka"/></div>
+       <div id="strawberries">
+            <div class="photo"><img src="img/strawberries.jpg" alt="truskawka"/></div>
             <div class= "form">
-                <p>Marchewka</p>
-                <p>Cena za kg: 5 zł</p>
+                <p>Truskawki</p>
+                <p>Cena za kg: 20 zł</p>
                 <p>Maksymalna ilość zamawianych kilogramów: 30 </p>
-                <p>Ile kg marchewki zamawiasz?</p> 
+                <p>Ile kg truskawek zamawiasz?</p> 
                 <form class="form" action="ilosc-do-wysylki" method="post">
-                <input type="text" id="CarrotKg" required placeholder="kg" required pattern="^(30|([12]{0,1}[0-9]{1}))$">
+                <input type="text" id="StrawberriesKg" required placeholder="kg" required pattern="^(30|([12]{0,1}[0-9]{1}))$">
                 <input type="submit" value="Dodaj"></input>
              </form>
             </div>
        </div>
 
-       <div id="lettuce">
-            <div class="photo"><img src="img/salad.jpg" alt="marchewka"/></div>
+       <div id="bananas">
+            <div class="photo"><img src="img/bananas.jpg" alt="banany"/></div>
             <div class= "form">
-                <p>Sałata</p>
-                <p>Cena za sztukę: 4 zł</p>
-                <p>Maksymalna ilość zamawianych sztuk: 30 </p>
-                <p>Ile sztuk sałaty zamawiasz?</p> 
+                <p>Banany</p>
+                <p>Cena za sztukę: 5 zł</p>
+                <p>Maksymalna ilość zamawianych kilogramów: 30 </p>
+                <p>Ile kg bananów zamawiasz?</p> 
                 <form class="form" action="ilosc-do-wysylki" method="post">
-                    <input type="text" id="LettuceKg" required placeholder="szt" required pattern="^(30|([12]{0,1}[0-9]{1}))$">
+                    <input type="text" id="BananasKg" required placeholder="szt" required pattern="^(30|([12]{0,1}[0-9]{1}))$">
                     <input type="submit" value="Dodaj"></input>
                  </form>
 
             </div>
            
        </div>
-       <div id="tomato">
-            <div class="photo"><img src="img/tomatoes.jpg" alt="marchewka"/></div>
+       <div id="grapes">
+            <div class="photo"><img src="img/grapes.jpg" alt="winogrona"/></div>
             <div class= "form">
-                <p>Pomidory</p>
+                <p>Winogrona</p>
                 <p>Cena za kg: 15 zł</p>
                 <p>Maksymalna ilość zamawianych kilogramów: 30 </p>
-                <p>Ile kg pomidorów zamawiasz?</p> 
+                <p>Ile kg winogron zamawiasz?</p> 
                 <form class="form" action="ilosc-do-wysylki" method="post">
-                    <input type="text" id="TomatoKg" required placeholder="kg" required pattern="^(30|([12]{0,1}[0-9]{1}))$">
+                    <input type="text" id="GrapesKg" required placeholder="kg" required pattern="^(30|([12]{0,1}[0-9]{1}))$">
                     <input type="submit" value="Dodaj"></input>
                  </form>
 
