--- a/vegetables.html
+++ b/vegetables.html
@@ -27,7 +27,7 @@
         </div>
     </header>
 
-   <section class="vegetablesSection">
+   <section class="productsSection">
 
        <div id="carrot">
             <div class="photo"><img src="img/carrots.jpg" alt="marchewka"/></div>
