--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <title>Grocery Store Eko-Food</title>
 <link href="css/style.css" rel="stylesheet">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
 
 </head>
@@ -62,7 +62,7 @@
             
         </div>
      </section>
-    </nav> 
+    .</nav> 
 
     <main>
         <div id="carrot">
@@ -189,9 +189,9 @@
 
     <section class="summary">
         <p> Zawartość Twojego koszyka to: </p>
-        <ul>
+        <div>
 
-        </ul>
+        </div>
     </section>
 
     <footer>
