--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
             <div class= "form">
                 <p>Marchewka</p>
                 <p>Cena za kg: 5 zł</p>
-                <p>Maksymalna ilość zamawianych kilogramów: 30 </p>
+                <p>Maksymalna ilość jednorazowo zamawianych kilogramów: 30 </p>
                 <p>Ile kg marchewki zamawiasz?</p> 
                 <form class="form" action="ilosc-do-wysylki" method="post">
-                <input type="text" id="CarrotKg" required placeholder="kg" required pattern="^(30|([12]{0,1}[0-9]{1}))$">
+                <input type="text" id="CarrotKg" required placeholder="kg" required pattern="^(10|([12]{0,1}[0-9]{1}))$">
                 <input type="submit" value="Dodaj"></input>
              </form>
             </div>
@@ -84,7 +84,7 @@
             <div class= "form">
                 <p>Sałata</p>
                 <p>Cena za sztukę: 4 zł</p>
-                <p>Maksymalna ilość zamawianych sztuk: 30 </p>
+                <p>Maksymalna ilość jednorazowo zamawianych sztuk: 30 </p>
                 <p>Ile sztuk sałaty zamawiasz?</p> 
                 <form class="form" action="ilosc-do-wysylki" method="post">
                     <input type="text" id="LettuceKg" required placeholder="szt" required pattern="^(30|([12]{0,1}[0-9]{1}))$">
@@ -99,7 +99,7 @@
             <div class= "form">
                 <p>Pomidory</p>
                 <p>Cena za kg: 15 zł</p>
-                <p>Maksymalna ilość zamawianych kilogramów: 30 </p>
+                <p>Maksymalna ilość jednorazowo zamawianych kilogramów: 30 </p>
                 <p>Ile kg pomidorów zamawiasz?</p> 
                 <form class="form" action="ilosc-do-wysylki" method="post">
                     <input type="text" id="TomatoKg" required placeholder="kg" required pattern="^(30|([12]{0,1}[0-9]{1}))$">
@@ -114,7 +114,7 @@
         <div class= "form">
             <p>Truskawki</p>
             <p>Cena za kg: 20 zł</p>
-            <p>Maksymalna ilość zamawianych kilogramów: 30 </p>
+            <p>Maksymalna ilość jednorazowo zamawianych kilogramów: 30 </p>
             <p>Ile kg truskawek zamawiasz?</p> 
             <form class="form" action="ilosc-do-wysylki" method="post">
             <input type="text" id="StrawberriesKg" required placeholder="kg" required pattern="^(30|([12]{0,1}[0-9]{1}))$">
@@ -128,7 +128,7 @@
         <div class= "form">
             <p>Banany</p>
             <p>Cena za sztukę: 5 zł</p>
-            <p>Maksymalna ilość zamawianych kilogramów: 30 </p>
+            <p>Maksymalna ilość jednorazowo zamawianych kilogramów: 30 </p>
             <p>Ile kg bananów zamawiasz?</p> 
             <form class="form" action="ilosc-do-wysylki" method="post">
                 <input type="text" id="BananasKg" required placeholder="szt" required pattern="^(30|([12]{0,1}[0-9]{1}))$">
@@ -144,7 +144,7 @@
         <div class= "form">
             <p>Winogrona</p>
             <p>Cena za kg: 15 zł</p>
-            <p>Maksymalna ilość zamawianych kilogramów: 30 </p>
+            <p>Maksymalna ilość jednorazowo zamawianych kilogramów: 30 </p>
             <p>Ile kg winogron zamawiasz?</p> 
             <form class="form" action="ilosc-do-wysylki" method="post">
                 <input type="text" id="GrapesKg" required placeholder="kg" required pattern="^(30|([12]{0,1}[0-9]{1}))$">
@@ -159,7 +159,7 @@
     <div class= "form">
         <p>Mleko</p>
         <p>Cena za litr: 5 zł</p>
-        <p>Maksymalna ilość zamawianych litrów: 30 </p>
+        <p>Maksymalna ilość jednorazowo zamawianych litrów: 30 </p>
         <p>Ile litrów mleka zamawiasz?</p> 
         <form class="form" action="ilosc-do-wysylki" method="post">
         <input type="text" id="MilkKg" required placeholder="kg" required pattern="^(30|([12]{0,1}[0-9]{1}))$">
@@ -173,7 +173,7 @@
     <div class= "form">
         <p>Ser</p>
         <p>Cena za 100 dag: 24 zł</p>
-        <p>Maksymalna ilość (1 szt czyli 100 dag): 30 </p>
+        <p>Maksymalna ilość jednorazowow zamawianych sztuk(1 szt czyli 100 dag): 30 </p>
         <p>Ile sztuk zamawiasz?</p> 
         <form class="form" action="ilosc-do-wysylki" method="post">
             <input type="text" id="CheeseKg" required placeholder="szt" required pattern="^(30|([12]{0,1}[0-9]{1}))$">
